--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "start": "index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +19,9 @@
     "mysql2": "^2.0.2",
     "sequelize": "^5.21.3",
     "sequelize-pool": "^2.3.0"
+  },
+  "engines": {
+    "node": ">= 8.11.2",
+    "npm": ">= 5.6.0"
   }
 }
